10-atlassian/jira/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: atlassian
  name: jira
  labels:
    app.kubernetes.io/instance: jira

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jira
  template:
    metadata:
      labels:
        app: jira
    spec:
      nodeSelector:
        kubernetes.io/hostname: "dev"
      containers:
      - name: jira
        image: atlassian/jira-software
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
#         hostPort: 8080
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
        - name: mysql-lib
          mountPath: /opt/atlassian/jira/lib/mysql-connector-java-8.0.22.jar
        - name: data-docker
          mountPath: /var/atlassian/application-data/jira

      volumes:
      - name: tz-config
        hostPath:
          path: /etc/localtime
      - name: mysql-lib
        hostPath:
          path: /data/libs/mysql-connector-java-8.0.22.jar
      - name: data-docker
        hostPath:
          path: /data/kube/jira
          type: DirectoryOrCreate
