10-atlassian/jira/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  namespace: atlassian
  name: jira
  labels:
    app.kubernetes.io/instance: jira

spec:
  selector:
    app: jira
  ports:
  - name: jira
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
